# vocab-reader

./: .env.example  .gitignore  PLAN.md  PROGRESS.md  README.md  REQUIREMENTS.md  analyze_output.txt  design.md  pubspec.yaml  test_gemini.dart  test_models.dart  test_models_quota.dart  test_output.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/bookbeam/: MainActivity.kt
android/llamalib/: build.gradle
docs/: phase-a-local-ai-optimization.md
experiments/llama-cpp-baseline/: protocol.md
experiments/mediapipe-genai-baseline/: protocol.md
lib/: main.dart
lib/game/: quiz_engine.dart
lib/models/: user_level.dart  word.dart
lib/providers/: book_provider.dart  connectivity_provider.dart  quiz_provider.dart  settings_provider.dart  sync_provider.dart  theme_provider.dart  word_provider.dart
lib/screens/: add_word_screen.dart  book_detail_screen.dart  books_screen.dart  edit_word_screen.dart  home_screen.dart  onboarding_screen.dart  quiz_mode_screen.dart  quiz_results_screen.dart  quiz_screen.dart  review_screen.dart  settings_screen.dart  word_detail_screen.dart
lib/services/: adaptive_quiz_service.dart  ai_service.dart  cactus_ffi.dart  cactus_local_service.dart  cactus_worker.dart  database_service.dart  device_capability.dart  llama3_format.dart  local_ai_service.dart  sync_service.dart  word_summary_grammar.dart
lib/theme/: app_theme.dart
llama_cpp_native/src/: CMakeLists.txt
test/: widget_test.dart
test/screens/: home_screen_test.dart  quiz_mode_screen_test.dart  settings_screen_benchmark_test.dart
test/services/: adaptive_quiz_service_test.dart  ai_service_lfm_tuning_test.dart  ai_service_quiz_generation_test.dart  cactus_only_configuration_test.dart
